--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -7,7 +7,7 @@ jsamek:
 kkim:
   name: Kathy Kim
   primary: Conference Chair
-  image: avatar.jpg
+  image: kathykim.jpg
 
 mwang:
   name: Matthew Wang
@@ -155,7 +155,7 @@ amancini:
   name: Athena Mancini
   primary: Plenary Head
   secondary: Earth Overburdened
-  image: avatar.jpg
+  image: athena.jpg
 
 areeves:
   name: Alex Colville-Reeves
@@ -173,7 +173,7 @@ sqaadri:
   name: Shafiq Qaadri
   primary: Plenary Head
   secondary: WMDs
-  image: avatar.jpg
+  image: shafiq.png
 
 jmdouglas:
   name: Jade Mair Douglas
