--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -161,7 +161,7 @@ areeves:
   name: Alex Colville-Reeves
   primary: Plenary Head
   secondary: Feminism
-  image: avatar.jpg
+  image: areeves.jpg
 
 jliao:
   name: James Liao
@@ -184,7 +184,7 @@ jmdouglas:
 apasricha:
   name: Aryan Pasricha
   primary: Assistant Programs
-  image: avatar.jpg
+  image: apasricha.png
 
 akazakov:
   name: Alexander Kazakov
