--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -173,6 +173,7 @@ areeves:
 kparamaanatham:
   name: Kohilan Paramaanantham
   primary: Plenary Head
+  image: avatar.jpg
   
 sqaadri:
   name: Shafiq Qaadri
