minor FAQ update

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -64,7 +64,7 @@ conference day:
 
   whattimesdoalloftheseeventshappen:
     question: "What times do all of these events happen?"
-    answer: "We\'ll add a schedule page to our website as the conference nears."
+    answer: "Head to the schedule page on our website to see the full schedule for the conference."
 
   willstudentsbeprovidedlunch:
     question: "Will students be provided lunch?"
