--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -13,7 +13,7 @@ kkim:
 mwang:
   name: Matthew Wang
   primary: Director General
-  secondary: Web Developer / Graphic Designer 
+  secondary: Web Developer / Graphic Designer
   bio: How do Web Developers mark their work? They Graphic De-sign it.
   image: mwang.jpg
   email: matt@matthewwang.me
@@ -112,7 +112,7 @@ nmelchoir:
   name: Nicole Melchoir
   primary: Closing Panel Head
   image: nmelchoir.jpg
-  
+
 # Plen heads
 
 vchindea:
@@ -174,7 +174,7 @@ jliao:
   primary: Plenary Head
   secondary: Feminism
   image: jliao.jpg
-  
+
 sqaadri:
   name: Shafiq Qaadri
   primary: Plenary Head
@@ -186,13 +186,13 @@ jmdouglas:
   primary: Plenary Head
   secondary: WMDs
   image: avatar.jpg
-  
+
  # Assistants
 apasricha:
   name: Aryan Pasricha
   primary: Assistant Programs
   image: apasricha.png
-  
+
 
 # Design
 
@@ -270,19 +270,19 @@ clau:
   name: Carson Lau
   primary: Audio/Visual Team
   image: clau.jpg
-  
+
 ssobie:
   name: Sloan Sobie
   primary: Audio/Visual Team
   image: ssobie.jpg
-  
+
 tbajeojo:
   name: Toni Agbaje-Ojo
   primary: Audio/Visual Team
   image: avatar.jpg
 
 # Video
-  
+
 sstern:
   name: Sheldon Stern
   primary: Video Crew Lead
@@ -290,12 +290,12 @@ sstern:
 
 ahwang:
   name: Alexander Hwang
-  primary: Video Crew 
+  primary: Video Crew
   image: ahwang.png
-  
+
 erosen:
   name: Eitan Rosen
-  primary: Video Crew 
+  primary: Video Crew
   image: avatar.jpg
 
 jzhang:
@@ -323,12 +323,12 @@ cgrasse:
   name: Cooper Mendelson-Grasse
   primary: Actor
   image: avatar.jpg
-  
+
 ing:
   name: Isaac Ng
   primary: Actor
   image: avatar.jpg
-  
+
 gdogra:
   name: Gaurav Dogra
   primary: Actor
@@ -338,27 +338,27 @@ pkong:
   name: Phillip Kong
   primary: Actor
   image: avatar.jpg
-  
+
 blee:
   name: Benjamin Lee
   primary: Actor
   image: avatar.jpg
-  
+
 smakarov:
   name: Stefan Makarov
   primary: Actor
   image: avatar.jpg
-  
+
 sofiara:
   name: Simon Ofiara
   primary: Actor
   image: avatar.jpg
-  
+
 wblair:
   name: Will Blair
   primary: Actor
   image: avatar.jpg
-  
+
 jli:
   name: Jimmy Li
   primary: Actor
@@ -375,7 +375,7 @@ stemple:
   name: Samantha Temple
   primary: Photographer
   image: avatar.jpg
-  
+
 asteeves:
   name: Avery Steeves
   primary: Photographer
@@ -395,109 +395,109 @@ jyeresian:
   name: James Yeretsian
   primary: Photographer
   image: avatar.jpg
-  
+
 # Security
 
 giannantuono:
   name: Gianluca Iannantuono
   primary: Security Team
   image: avatar.jpg
-  
+
 ybelkhou:
   name: Yassine Belkhou
   primary: Security Team
   image: avatar.jpg
-  
+
 mkegan:
   name: Michael Kagan
   primary: Security Team
   image: avatar.jpg
-  
+
 tlittler:
   name: Teddy Littler
   primary: Security Team
   image: avatar.jpg
-  
+
 nsinnathurai:
   name: Nixon Sinnathurai
   primary: Security Team
   image: avatar.jpg
-  
+
 slanglois:
   name: Sean Langlois
   primary: Security Team
   image: avatar.jpg
-  
+
 obrown:
   name: Oscar Brown
   primary: Security Team
   image: avatar.jpg
-  
+
 pbujouves:
   name: PJ Bujouves
   primary: Security Team
   image: avatar.jpg
-  
+
 kwennberg:
   name: Karl Wennberg
   primary: Security Team
   image: avatar.jpg
-  
+
 mfard:
   name: Milad Fard
   primary: Security Team
   image: avatar.jpg
-  
+
 afrancescutti:
   name: Adam Francescutti
   primary: Security Team
   image: avatar.jpg
-  
+
 aspeirs:
   name: Andrew Speirs
   primary: Security Team
   image: avatar.jpg
-  
+
 jzhang:
   name: Jeremy Zhang
   primary: Security Team
   image: avatar.jpg
-  
+
 swaheed:
   name: Sarosh Waheed
   primary: Security Team
   image: avatar.jpg
-  
+
 ahwang:
   name: Alexander Hwang
   primary: Security Team
   image: avatar.jpg
-  
+
 tsantos:
   name: Thomas Santos
   primary: Security Team
   image: avatar.jpg
-  
+
 cdowd:
   name: Campbell Dowd
   primary: Security Team
   image: avatar.jpg
-  
+
 akukreja:
   name: Ansh Kukreja
   primary: Security Team
   image: avatar.jpg
-  
+
 aganesh:
   name: Akash Kennedy Ganesh
   primary: Security Team
   image: avatar.jpg
-  
+
 wmnzione:
   name: William Monzione
   primary: Security Team
   image: avatar.jpg
-  
+
 adowning:
   name: Andrew Downing
   primary: Security Team
@@ -512,22 +512,22 @@ dtesfay:
   name: Daniel Tesfay
   primary: Security Team
   image: avatar.jpg
-  
+
 drealini:
   name: Dano Realini
   primary: Security Team
   image: avatar.jpg
-  
+
 lstevens:
   name: Luke Stevens
   primary: Security Team
   image: avatar.jpg
-  
+
 dkutsec:
   name: Davis Kutsec
   primary: Security Team
   image: avatar.jpg
-  
+
 aginanena:
   name: Angelous Ginanena
   primary: Security Team
@@ -537,39 +537,44 @@ jcait:
   name: Jeremy Cait
   primary: Security Team
   image: avatar.jpg
-  
+
 cmckinney:
   name: Connor McKinney
   primary: Security Team
   image: avatar.jpg
-  
+
 aeppinghoven:
   name: Alex Von Eppinghoven
   primary: Security Team
   image: avatar.jpg
-  
+
 rberz:
   name: Raphael Berz
   primary: Security Team
   image: avatar.jpg
-  
+
 athoburn:
   name: Anna Thoburn
   primary: Security Team
   image: avatar.jpg
-  
+
 msmith:
   name: Madeline Smith
   primary: Security Team
   image: avatar.jpg
-  
+
 brusset:
   name: Bess Russet
   primary: Security Team
   image: avatar.jpg
-  
+
 jyu:
   name: Jacqueline Yu
+  primary: Security Team
+  image: avatar.jpg
+
+swilliams:
+  name: Sophia Williams
   primary: Security Team
   image: avatar.jpg
   
@@ -577,42 +582,42 @@ gmatheson:
   name: Ginny Matheson
   primary: Security Team
   image: avatar.jpg
-  
+
 csung:
   name: Cailin Sung
   primary: Security Team
   image: avatar.jpg
-  
+
 jgriffith:
   name: Julia Griffith
   primary: Security Team
   image: avatar.jpg
-  
+
 amarcus:
   name: Ani Marcus
   primary: Security Team
   image: avatar.jpg
-  
+
 ehristov:
   name: Emma Hristov
   primary: Security Team
   image: avatar.jpg
-  
+
 grichardson:
   name: Gwyneth Richardson
   primary: Security Team
   image: avatar.jpg
-  
+
 jzheng:
   name: Jessica Zheng
   primary: Security Team
   image: avatar.jpg
-  
+
 kbaldock:
   name: Kate Baldock
   primary: Security Team
   image: avatar.jpg
-  
+
 mheadrick:
   name: Morgan Headrick
   primary: Security Team
@@ -622,55 +627,53 @@ maheadrick:
   name: Mary Headrick
   primary: Security Team
   image: avatar.jpg
-  
+
 mlangill:
   name: Mary Langill
   primary: Security Team
   image: avatar.jpg
-  
+
 eholloway:
   name: Emma Holloway
   primary: Security Team
   image: avatar.jpg
-  
+
 mlangill:
   name: Mary Langill
   primary: Security Team
   image: avatar.jpg
-  
+
 eholloway:
   name: Emma Holloway
   primary: Security Team
   image: avatar.jpg
-  
+
 echow:
   name: Emma Chow
   primary: Security Team
   image: avatar.jpg
-  
+
 kwang:
   name: Kaitlyn Wang
   primary: Security Team
   image: avatar.jpg
-  
+
 motton:
   name: Malorie Otton
   primary: Security Team
   image: avatar.jpg
-  
+
 mkisob:
   name: Massoma Kisob
   primary: Security Team
   image: avatar.jpg
-  
+
 mminnes:
   name: Maddy Minnes
   primary: Security Team
   image: avatar.jpg
-  
+
 eburke:
   name: Emily Burke
   primary: Security Team
   image: avatar.jpg
-
-
