--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -125,7 +125,7 @@ elee:
   name: Elaine Lee
   primary: Plenary Head
   secondary: China
-  image: avatar.jpg
+  image: elee.jpg
 
 shooey:
   name: Shaan Hooey
