woops minor name fix

--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -196,7 +196,7 @@ apasricha:
 kparamaanatham:
   name: Kohilan Paramaanantham
   primary: Plenary Head
-  image: kparamaanatham.png
+  image: kparamaanantham.png
 
 # Design
 
