--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -137,7 +137,7 @@ zazim:
   name: Zainab Azim
   primary: Plenary Head
   secondary: Cryptocurrencies
-  image: avatar.jpg
+  image: zazim.jpg
 
 moneill:
   name: Molly O'Neill
