--- a/_data/staff.yml
+++ b/_data/staff.yml
@@ -143,7 +143,7 @@ moneill:
   name: Molly O'Neill
   primary: Plenary Head
   secondary: Legalisation of Drugs
-  image: avatar.jpg
+  image: moneill.jpg
 
 eullman:
   name: Ethan Ullman
