--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'src/**'
+      - 'public/**'
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -11,6 +16,8 @@ jobs:
         uses: actions/checkout@v2.3.1
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        env:
+          REACT_APP_EMAIL_LIST_API: ${{secrets.REACT_APP_EMAIL_LIST_API}}
         run: |
           yarn install --frozen-lockfile
           yarn run build
