--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.19.0",
+    "dotenv": "^10.0.0",
     "jquery": "^3.5.1",
+    "node-fetch": "^2.6.1",
+    "node-sass": "4.12",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-checkmark": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha-v3": "^1.9.5",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
@@ -30,9 +35,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -62,7 +65,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
