update email list policy

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
