--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^10.0.0",
     "jquery": "^3.5.1",
     "node-fetch": "^2.6.1",
-    "node-sass": "4.13.1",
+    "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
