--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write src/",
+    "lint": "eslint --ext .js,.jsx src/"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +60,7 @@
   },
   "devDependencies": {
     "eslint": "^7.20.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1"
