--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "check": "prettier --check src/",
     "format": "prettier --write src/",
     "lint": "eslint --ext .js,.jsx src/"
   },
