--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2020",
-    "checkJs": true
+    "allowJs": true
   },
   "include": ["src/**/*"]
 }
