--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "dotenv": "^10.0.0",
     "jquery": "^3.5.1",
     "node-fetch": "^2.6.1",
-    "node-sass": "^6.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
@@ -29,6 +28,7 @@
     "react-scripts": "4.0.2",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1",
+    "sass": "^1.44.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
