--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#IDE
+.idea
 # Logs
 logs
 *.log
@@ -121,10 +123,6 @@ dist
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # vscode
 .vscode
