--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_ENV=development GENERATE_SOURCEMAP=true react-scripts start",
+    "build": "NODE_ENV=development GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "check": "prettier --check src/",
