update plenary themes

--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "react-google-recaptcha-v3": "^1.9.5",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1",
     "sass": "^1.44.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "scripts": {
     "start": "NODE_ENV=development GENERATE_SOURCEMAP=true react-scripts start",
@@ -64,6 +67,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "react-error-overlay": "6.0.9"
   }
 }
