--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"test:unit:watch": "vitest",
 		"test:e2e": "playwright test",
 		"lint": "eslint . && prettier --check .",
-		"lint:fix": "eslint --fix . && prettier --write ."
+		"lint:fix": "eslint --fix . && prettier --write .",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.0.2",
@@ -48,7 +49,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
-		"vitest": "^0.32.2"
+		"vitest": "^0.32.2",
+		"husky": "^8.0.0"
 	},
 	"type": "module",
 	"config": {
