--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"@faker-js/faker": "^8.0.2",
 		"@firebase/rules-unit-testing": "^2.0.7",
 		"@playwright/test": "^1.28.1",
-		"@poppanator/sveltekit-svg": "^3.0.1",
 		"@sveltejs/adapter-netlify": "^2.0.7",
 		"@sveltejs/kit": "^1.20.4",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -38,6 +37,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"husky": "^8.0.0",
 		"jsdom": "^22.1.0",
 		"msw": "^1.2.2",
 		"postcss": "^8.4.24",
@@ -49,8 +49,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
-		"vitest": "^0.32.2",
-		"husky": "^8.0.0"
+		"vitest": "^0.32.2"
 	},
 	"type": "module",
 	"config": {
