--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6",
+		"vite-plugin-iso-import": "^1.0.0",
 		"vitest": "^0.32.2"
 	},
 	"type": "module",
